manifests/base/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  strategy: {}
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp-php
        image: webapp-php:v1.0.0
        volumeMounts:
        - mountPath: /var/run/php
          name: php-sock
        resources:
          requests:
            memory: "16Mi"
            cpu: "50m"
          limits:
            memory: "32Mi"
            cpu: "100m"
      - name: webapp-nginx
        image: webapp-nginx:v1.0.0
        volumeMounts:
        - name: php-sock
          mountPath: /var/run/php
        resources:
          requests:
            memory: "16Mi"
            cpu: "50m"
          limits:
            memory: "32Mi"
            cpu: "100m"
      volumes:
      - name: php-sock
        emptyDir: {}
